add russian text